tests/exceptions/ill-typed/extra-tests/open-variant-exceptions.stella
language core;

extend with
    #exceptions,
    #open-variant-exceptions,
    #variants;

exception variant error_code : Nat
exception variant good : Bool
fn main(n : Nat) -> Bool {
    return throw(0)
}
